<resources>
    <string name="app_name">Practical2</string>
    <string name="havanese">havanese</string>
    <string name="german_shepherd_guide">German Shepherd Guide</string>
    <string name="_1_german_shepherd_guide">1) German Shepherd Guide</string>
    <string name="picgermanshepherd">picGermanShepherd</string>
    <string name="pichuskyjack">picHuskyJack</string>
    <string name="picgoldendoodle">picGoldenDoodle</string>
    <string name="_2_german_sheppit">2) German Sheppit</string>
    <string name="_5_greater_swiss_mountain_dog">5) Greater Swiss Mountain Dog</string>
    <string name="_4_golden_retriever">4) Golden Retriever</string>
    <string name="_6_havanese">6) Havanese</string>
    <string name="_7_husky_jack">7) Husky Jack</string>
    <string name="_8_havashire">8) Havashire</string>
    <string name="_9_harrier">9) Harrier</string>
    <string name="_10_huskador">10) Huskador</string>
    <string name="_3_goldendoodle">3) Goldendoodle</string>
    <string name="picgermansheppit">picGermanSheppit</string>
    <string name="picgoldenretriever">picGoldenRetriever</string>
    <string name="pichavanese">picHavanese</string>
    <string name="pichavshire">picHavshire</string>
    <string name="picharrier">picHarrier</string>
    <string name="pichuskador">picHuskador</string>
    <string name="picgreaterswiss">picGreaterSwiss</string>
    <string name="display_information">Display Information</string>
    <string name="back_to_home_page">BACK TO HOME PAGE</string>
    <string name="click_here_for_more_information">Click here for more information</string>
    <string name="_10_facts_about_dogs_that_start_with_letter_g_and_h">10 FACTS ABOUT DOGS THAT START WITH LETTER G AND H</string>
    <string name="press_on_the_name_of_the_animal_you_know_to_know_more_about">Press on the name of the animal you know to know more about</string>
    <string name="facts_about_the_animal">FACTS ABOUT THE ANIMAL</string>
    <string name="images">images</string>
</resources>