<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6A9ED9"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/_10_facts_about_dogs_that_start_with_letter_g_and_h"
                android:textColor="#000000"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="15sp"
                android:text="@string/press_on_the_name_of_the_animal_you_know_to_know_more_about"
                android:textColor="#000000"

                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="221dp"
                    android:layout_height="2510dp"
                    android:orientation="vertical"
                    tools:layout_marginLeft="40sp">

                    <TextView
                        android:id="@+id/tvGermanShepherd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1_german_shepherd_guide"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        tools:fontFamily="sans-serif-condensed-medium" />

                    <TextView
                        android:id="@+id/tvGermanSheppit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="240sp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/_2_german_sheppit"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvGoldendoodle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="240sp"
                        android:text="@string/_3_goldendoodle"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        tools:fontFamily="sans-serif-condensed-medium" />

                    <TextView
                        android:id="@+id/tvGoldenRetriever"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="180sp"
                        android:text="@string/_4_golden_retriever"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        tools:fontFamily="sans-serif-condensed-medium" />

                    <TextView
                        android:id="@+id/tvGreaterSwissMountain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="240sp"
                        android:text="@string/_5_greater_swiss_mountain_dog"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        tools:fontFamily="sans-serif-condensed-medium" />

                    <TextView
                        android:id="@+id/tvHavanese"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="220sp"
                        android:text="@string/_6_havanese"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        tools:fontFamily="sans-serif-condensed-medium" />

                    <TextView
                        android:id="@+id/tvHuskyJack"
                        android:layout_width="214dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="220sp"
                        android:text="@string/_7_husky_jack"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        tools:fontFamily="sans-serif-condensed-medium" />

                    <TextView
                        android:id="@+id/tvHavashire"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="220sp"
                        android:text="@string/_8_havashire"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        tools:fontFamily="sans-serif-condensed-medium" />

                    <TextView
                        android:id="@+id/tvHarrier"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="240sp"
                        android:text="@string/_9_harrier"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        tools:fontFamily="sans-serif-condensed-medium" />

                    <TextView
                        android:id="@+id/tvHuskador"
                        android:layout_width="match_parent"
                        android:layout_height="31dp"
                        android:layout_marginTop="240sp"
                        android:text="@string/_10_huskador"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        tools:fontFamily="sans-serif-condensed-medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="585dp"
                    android:layout_height="2543dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/picGermanShepherd"
                        android:layout_width="154dp"
                        android:layout_height="162dp"
                        android:layout_marginBottom="50sp"
                        android:contentDescription="@string/picgermanshepherd"
                        app:srcCompat="@drawable/german_shepherd" />

                    <ImageView
                        android:id="@+id/picGermanSheppit"
                        android:layout_width="154dp"
                        android:layout_height="162dp"
                        android:layout_marginBottom="50sp"
                        android:contentDescription="@string/picgermansheppit"
                        app:srcCompat="@drawable/germansheppit" />

                    <ImageView
                        android:id="@+id/picGoldenDoodle"
                        android:layout_width="154dp"
                        android:layout_height="162dp"
                        android:layout_marginBottom="50sp"
                        android:contentDescription="@string/picgoldendoodle"
                        app:srcCompat="@drawable/goldendoodle" />

                    <ImageView
                        android:id="@+id/picGoldenRetriever"
                        android:layout_width="154dp"
                        android:layout_height="162dp"
                        android:layout_marginBottom="50sp"
                        android:contentDescription="@string/picgoldenretriever"
                        app:srcCompat="@drawable/goldenretrievers" />

                    <ImageView
                        android:id="@+id/picGreatSwissMountain"
                        android:layout_width="154dp"
                        android:layout_height="162dp"
                        android:layout_marginBottom="50sp"
                        android:contentDescription="@string/picgreaterswiss"
                        app:srcCompat="@drawable/greatswissmountain" />

                    <ImageView
                        android:id="@+id/picHavanese"
                        android:layout_width="154dp"
                        android:layout_height="162dp"
                        android:layout_marginBottom="50sp"
                        android:contentDescription="@string/pichavanese"
                        app:srcCompat="@drawable/havanese" />

                    <ImageView
                        android:id="@+id/picHuskyJack"
                        android:layout_width="154dp"
                        android:layout_height="162dp"
                        android:layout_marginBottom="50sp"
                        android:contentDescription="@string/pichuskyjack"
                        app:srcCompat="@drawable/huskyjack" />

                    <ImageView
                        android:id="@+id/picHavshire"
                        android:layout_width="154dp"
                        android:layout_height="162dp"
                        android:layout_marginBottom="50sp"
                        android:contentDescription="@string/pichavshire"
                        app:srcCompat="@drawable/havashire" />

                    <ImageView
                        android:id="@+id/picHarrier"
                        android:layout_width="154dp"
                        android:layout_height="162dp"
                        android:layout_marginBottom="50sp"
                        android:contentDescription="@string/picharrier"
                        app:srcCompat="@drawable/harrier" />

                    <ImageView
                        android:id="@+id/picHuskador"
                        android:layout_width="154dp"
                        android:layout_height="162dp"
                        android:contentDescription="@string/pichuskador"
                        app:srcCompat="@drawable/huskador" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
