<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEEB"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvTitleDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/facts_about_the_animal"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginBottom="20sp"
                android:hint="@string/display_information"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:fontFamily="sans-serif-medium" />

            <Button
                android:id="@+id/btnLinkPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="#03A9F4"
                android:text="@string/click_here_for_more_information" />

            <Button
                android:id="@+id/btnHomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E11E1E"
                android:text="@string/back_to_home_page" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
